# insula-processors-builder-cli

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/insula_processor_cli/: __init__.py  __main__.py  auth.py  cli.py  config.py  errors.py
src/insula_processors_builder_cli/: __init__.py  __main__.py  auth.py  cli.py  config.py  github.py  publish.py
tests/: test_cli.py  test_github.py  test_publish.py
